--- a/index.html
+++ b/index.html
@@ -127,6 +127,8 @@
           <div class="pin" data-index="0"></div>
           <div class="pin" data-index="1"></div>
           <div class="pin" data-index="2"></div>
+          <div class="pin" data-index="3"></div>
+          <div class="pin" data-index="4"></div>
         </div>
       </div>
       <div class="lockpick" id="lockpick"></div>
@@ -137,8 +139,8 @@
   </div>
   <script>
     // Параметры замка
-    const correctCombination = [true, false, true]; // Правильная комбинация пазов
-    let currentCombination = [false, false, false]; // Текущая комбинация
+    const correctCombination = [true, false, false, true, true]; // Правильная комбинация пазов
+    let currentCombination = [false, false, false, false, false]; // Текущая комбинация
     let lockpicks = 5; // Количество отмычек
 
     const lockpick = document.getElementById('lockpick');
